Fix broken styles because of line-height change

--- a/css/base.less
+++ b/css/base.less
@@ -1,6 +1,7 @@
 
 h1, h2, h3, h4, h5, h6 {
     font-family: @fontFamily1;
+    line-height: 1.5;
 }
 
 h1 { font-size: 2.8em }
