--- a/css/style.css
+++ b/css/style.css
@@ -524,6 +524,7 @@ h4,
 h5,
 h6 {
   font-family: 'Source Sans Pro', sans-serif;
+  line-height: 1.5;
 }
 h1 {
   font-size: 2.8em;
@@ -544,7 +545,7 @@ h6 {
   font-size: 1em;
 }
 p {
-  margin: 1.7 0;
+  margin: 1.7em 0;
 }
 a {
   color: #1177bb;
@@ -598,13 +599,13 @@ body {
   text-shadow: 0 1px 0px rgba(255, 255, 255, 0.4);
   font-family: 'Libre Baskerville', serif;
   font-size: 16px;
-  line-height: 1.7;
+  line-height: 1.7em;
   color: #222222;
 }
 .container,
 header {
   margin: 0 auto;
-  padding: 1.7 3.4;
+  padding: 1.7em 3.4em;
   max-width: 1024px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -623,7 +624,7 @@ header {
   box-shadow: inset 0px 1px 1px rgba(255,255,255,0.2), 0px 1px 1px rgba(0,0,0,0.2);
 }
 header {
-  padding: 0 3.4;
+  padding: 0 3.4em;
   font-family: 'Source Sans Pro', sans-serif;
   *zoom: 1;
 }
@@ -659,7 +660,7 @@ header h1 {
   display: inline-block;
   font-weight: bold;
   text-decoration: none;
-  padding: 0.85;
+  padding: 0.85em;
   color: white;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -691,15 +692,15 @@ header h1 {
   box-shadow: 0px 1px 1px rgba(255,255,255,0.3), inset 0px 1px 1px rgba(0,0,0,0.2);
 }
 .info {
-  padding: 1.275;
+  padding: 1.275em;
   font-size: 0.75em;
   background-color: rgba(255, 255, 255, 0.5);
   -webkit-box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 0.85;
-  -moz-border-radius: 0.85;
-  border-radius: 0.85;
+  -webkit-border-radius: 0.85em;
+  -moz-border-radius: 0.85em;
+  border-radius: 0.85em;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
@@ -741,7 +742,7 @@ header h1 {
   margin: auto;
 }
 .post-date {
-  margin: -1.7 0 0;
+  margin: -1.7em 0 0;
   font-style: italic;
   font-size: 0.75rem;
 }
@@ -752,7 +753,7 @@ header h1 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 1.7;
+  padding: 1.7em;
 }
 .project-brief a,
 .project-image a {
@@ -772,7 +773,7 @@ header h1 {
 .project-brief a .caption,
 .project-image a .caption {
   display: block;
-  padding: 0.85;
+  padding: 0.85em;
   text-align: center;
   color: #444;
   font-size: 1.3rem;
@@ -792,8 +793,8 @@ header h1 {
   color: #888888;
   text-transform: uppercase;
   font-weight: bold;
-  margin: 0.85 0 0;
+  margin: 0.85em 0 0;
 }
 .links-list li {
-  margin-left: 2.55;
+  margin-left: 2.55em;
 }
